--- a/Actividad1_Correlacion.ipynb
+++ b/Actividad1_Correlacion.ipynb
@@ -3174,16 +3174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 591,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Cuantitativas_nuevo=Datos_limpios.iloc[:,[4,5,6]]"
+    "Cuantitativas_nuevo=Datos_limpios.iloc[:,[3,4,5]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 592,
    "metadata": {},
    "outputs": [
     {
@@ -3207,28 +3207,28 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>carat</th>\n",
        "      <th>depth</th>\n",
        "      <th>table</th>\n",
-       "      <th>price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>carat</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.026168</td>\n",
+       "      <td>0.172385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>depth</th>\n",
+       "      <td>0.026168</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>-0.229437</td>\n",
-       "      <td>0.007540</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>table</th>\n",
+       "      <td>0.172385</td>\n",
        "      <td>-0.229437</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.129427</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>price</th>\n",
-       "      <td>0.007540</td>\n",
-       "      <td>0.129427</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3236,13 +3236,13 @@
        "</div>"
       ],
       "text/plain": [
-       "          depth     table     price\n",
-       "depth  1.000000 -0.229437  0.007540\n",
-       "table -0.229437  1.000000  0.129427\n",
-       "price  0.007540  0.129427  1.000000"
+       "          carat     depth     table\n",
+       "carat  1.000000  0.026168  0.172385\n",
+       "depth  0.026168  1.000000 -0.229437\n",
+       "table  0.172385 -0.229437  1.000000"
       ]
      },
-     "execution_count": 553,
+     "execution_count": 592,
      "metadata": {},
      "output_type": "execute_result"
     }
